Installation of SiteCounter tracker

--- a/index.html
+++ b/index.html
@@ -2517,21 +2517,21 @@ giːθtɔm tamasnajxeo]
 	<script src="finder.js"></script>
 
 	<!-- Start of StatCounter Code for Default Guide -->
-	<!--<script type="text/javascript">
-	var sc_project=11035015; 
+	<script type="text/javascript">
+	var sc_project=11165787; 
 	var sc_invisible=1; 
-	var sc_security="e0bdc315"; 
+	var sc_security="57ede51a"; 
 	var scJsHost = (("https:" == document.location.protocol) ?
 	"https://secure." : "http://www.");
 	document.write("<sc"+"ript type='text/javascript' src='" +
 	scJsHost+
 	"statcounter.com/counter/counter.js'></"+"script>");
 	</script>
-	<noscript><div class="statcounter"><a title="shopify traffic
-	stats" href="http://statcounter.com/shopify/"
-	target="_blank"><img class="statcounter"
-	src="//c.statcounter.com/11035015/0/e0bdc315/1/"
-	alt="shopify traffic stats"></a></div></noscript>-->
+	<noscript><div class="statcounter"><a title="shopify stats"
+	href="http://statcounter.com/shopify/" target="_blank"><img
+	class="statcounter"
+	src="//c.statcounter.com/11165787/0/57ede51a/1/"
+	alt="shopify stats"></a></div></noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
